x12-edi/2.9/modules/ROOT/pages/index.adoc
= X12 EDI Connector 2.9 - Mule 4
:page-aliases: connectors::x12-edi/x12-edi-connector.adoc

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Premium] +

Anypoint Connector for X12 EDI (X12 EDI Connector) enables you to convert X12 messages to and from DataWeave-compatible representations by using lists and maps.
All of the schema definitions you need for xref:x12-edi-versions-x12.adoc[supported X12 standard transaction sets] are included. For complete information about schemas, see xref:x12-edi-connector::x12-edi-schema-language-reference.adoc[X12 EDI Schema Language Reference].

Many Health Insurance Portability and Accountability Act (HIPAA) document versions are also supported, as listed separately in the xref:x12-edi-versions-hipaa.adoc[Supported HIPAA Versions]. For more information about HIPAA usage, refer to xref:x12-edi-connector-hipaa.adoc[Connector HIPAA Standards].

== Prerequisites

To use this connector, you must be familiar with:

* Anypoint Connectors
* Mule runtime engine (Mule)
* Elements and global elements in a Mule flow
* Creating a Mule app using Anypoint Studio (Studio)

Before creating an app, you must have:

* Purchased a MuleSoft license for X12 EDI Connector.
+
Contact your Account Representative about purchasing a license.
+
* Anypoint Studio 7.0 or later

[NOTE]

X12 EDI Connector supports files of up to 15 MB in size, and the memory requirement is approximately 40 to 1.
For example, a 1 MB file requires up to 40 MB of memory to process, so it's important to consider this memory requirement in conjunction with your Transactions Per Second (TPS) needs for large X12 files.
This is not an exact figure; the value varies according to the complexity of the mapping instructions.

== Exchange Templates and Examples

https://www.mulesoft.com/exchange/[Anypoint Exchange] provides templates
that you can use as starting points for your apps and examples that illustrate a complete solution.

=== X12 EDI Connector Templates in Exchange

https://www.mulesoft.com/exchange/?search=x12&type=template&sort=score[Anypoint Exchange Templates for EDI X12] provide starting points for using X12 EDI Connector with Studio projects such as:

* Setting up your outbound transactions
+
https://www.mulesoft.com/exchange/org.mule.examples/template-b2b-edi-outbound-x12-map/minor/1.0//[Map application messages to outbound EDI X12 transactions]

* Setting up your inbound transactions

+
https://www.anypoint.mulesoft.com/exchange/org.mule.examples/template-b2b-edi-inbound-x12-map/minor/1.0//[Map inbound EDI X12 transactions to application message format]

* Setting up your Partner Manager content storage
+
https://www.anypoint.mulesoft.com/exchange/com.mulesoft.b2b/partner-manager-content-storage-service-s3/minor/1.0/[Partner Manager Content Storage API - S3 Template]

=== X12 EDI Connector Examples in Exchange

X12 EDI Connector examples in Exchange enable you to:

* https://www.mulesoft.com/exchange/works.integration/b2b-x12-custom-schema-example/minor/1.0/[Customize an X12 EDI schema for B2B integrations]
* https://www.mulesoft.com/exchange/org.mule.examples/example-b2b-nto-outbound-purchase-order-01/minor/1.0/[Transform outbound purchase order XML messages to X12 850 transactions]
* https://www.mulesoft.com/exchange/org.mule.examples/example-b2b-mythical-inbound-purchase-order-01/minor/1.0/[Transform inbound X12 850 transactions to JSON purchase orders]
* https://www.mulesoft.com/exchange/org.mule.examples/b2b-demo-x12-transform/[Transform outbound XML messages into X12 purchase orders, inbound X12 purchase orders into JSON, and generate a functional acknowledgement]
* https://www.mulesoft.com/exchange/com.mulesoft.muleesb.modules/b2b-order-to-cash-mapping/minor/1.0/[Implement an end-to-end order to cash workflow from the perspective of a seller]
* https://www.mulesoft.com/exchange/com.mulesoft.muleesb.modules/b2b-procure-to-pay-mappings/minor/1.0/[Implement an end-to-end B2B procure to pay workflow from the perspective of a buyer]

== Next Step

After you complete the prerequisites, you are ready to create your own app and configure the connector using xref:x12-edi-connector-studio.adoc[Anypoint Studio].

== See Also

xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]

xref:connectors::introduction/intro-use-exchange.adoc[Use Exchange to Discover Connectors, Templates, and Examples]

https://help.mulesoft.com[MuleSoft Help Center]
